--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,16 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
     <include src="./partials/genres.html"></include>
+    <include src="./partials/cards-container.html"></include>
+
+    <!-- ------------------------------------------------ -->
+    <!-- <include src="./partials/header.html"></include>
+    <include src="./partials/genres.html"></include>
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-one-film.html"></include>
     <include src="./partials/modal-students.html"></include>
-    <include src="./partials/top-arrow.html"></include>
+    <include src="./partials/top-arrow.html"></include> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
