--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,23 @@
       rel="stylesheet"
     />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon/favicon-16x16.png"
+    />
   </head>
 
   <body>
@@ -28,6 +42,12 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/genres.html"></include>
     <include src="./partials/cards-container.html"></include>
+    <include src="./partials/pagination.html"></include>
+    <include src="./partials/modal-one-film.html"></include>
+    <include src="./partials/footer.html"></include>
+
+    <include src="./partials/modal-students.html"></include>
+    <include src="./partials/top-arrow.html"></include>
 
     <!-- ------------------------------------------------ -->
     <!-- <include src="./partials/header.html"></include>
